// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries creates a clinic 1`] = `
Object {
  "data": Object {
    "createClinic": Object {
      "address": Object {
        "address": "test address",
        "city": "test city",
        "country": "test country",
        "province": "test province",
        "zipCode": "test zipCode",
      },
      "consultationFee": 500,
      "minimumSchedulingNoticeMins": 5,
      "name": "Clinic number 4",
      "roomNumber": "4",
      "slotDurationInMins": 3,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries deletes a clinic 1`] = `
Object {
  "data": Object {
    "deleteClinic": null,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches created clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "address": Object {
          "address": "test address",
          "city": "test city",
          "country": "test country",
          "province": "test province",
          "zipCode": "test zipCode",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 5,
        "name": "Clinic number 4",
        "roomNumber": "4",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "test address",
          "city": "test city",
          "country": "test country",
          "province": "test province",
          "zipCode": "test zipCode",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 5,
        "name": "Clinic number 4",
        "roomNumber": "4",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "test address",
          "city": "test city",
          "country": "test country",
          "province": "test province",
          "zipCode": "test zipCode",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 5,
        "name": "Clinic number 4",
        "roomNumber": "4",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "test address",
          "city": "test city",
          "country": "test country",
          "province": "test province",
          "zipCode": "test zipCode",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 5,
        "name": "Clinic number 4",
        "roomNumber": "4",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "test address",
          "city": "test city",
          "country": "test country",
          "province": "test province",
          "zipCode": "test zipCode",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 5,
        "name": "Clinic number 4",
        "roomNumber": "4",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "Test Address",
          "city": "San Jose",
          "country": "Philippines",
          "province": "Antique",
          "zipCode": "5700",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 4,
        "name": "Clinic number 5",
        "roomNumber": "9",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "Test Address",
          "city": "San Jose",
          "country": "Philippines",
          "province": "Antique",
          "zipCode": "5700",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 4,
        "name": "Clinic number 5",
        "roomNumber": "9",
        "slotDurationInMins": 3,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches existing clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "address": Object {
          "address": "Test Address",
          "city": "San Jose",
          "country": "Philippines",
          "province": "Antique",
          "zipCode": "5700",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 4,
        "name": "Clinic number 5",
        "roomNumber": "9",
        "slotDurationInMins": 3,
      },
      Object {
        "address": Object {
          "address": "Test Address",
          "city": "San Jose",
          "country": "Philippines",
          "province": "Antique",
          "zipCode": "5700",
        },
        "consultationFee": 500,
        "minimumSchedulingNoticeMins": 4,
        "name": "Clinic number 5",
        "roomNumber": "9",
        "slotDurationInMins": 3,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries updates a clinic 1`] = `
Object {
  "data": Object {
    "updateClinic": Object {
      "name": "Clinic number 5",
      "roomNumber": "9",
      "uid": "027ae0ac-05d6-43bf-818e-a76607b7f976",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries upserts a clinic 1`] = `
Object {
  "data": Object {
    "upsertClinic": Object {
      "address": Object {
        "address": "test2 address2",
        "city": "test2 city2",
        "country": "test2 country2",
        "province": "test2 province2",
        "zipCode": "test2 zipCode2",
      },
      "doctorClinicUid": "37aa28a2-faa7-4c1a-a7f6-b326e13fdab4",
      "name": "Clinic number 4",
      "roomNumber": "5",
      "uid": "88942977-8a59-4d23-a3b7-824c1972615d",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
